--- a/src/style.css
+++ b/src/style.css
@@ -10,11 +10,13 @@
     --line-color: rgba(111, 107, 107, 0.196);
 }
 
+/*
 html,
 body {
     scroll-behavior: smooth;
     height: 100%;
 }
+    */
 
 body {
     background-color: var(--tertiary-color);
